@@ -17,6 +17,9 @@ Version 0.6-8 (Closed Mon 26 Apr 2009)
 	'densityplot' and 'histogram' methods for 'residLen' objects using
 	Lattice graphics.
 
+	* predict.mat: Now returns the dissimilarity matrix between the 
+	training set samples and samples in 'newdata'.
+
 Version 0.6-7 (Closed Mon 13 Apr 2009) 
 
 	* optima, tolerance: new methods to coerce objects of these classes
